# yomutext

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: assigment-devscale.yaml  deployment.yaml
alembic/: env.py
alembic/versions/: 4bd7f18f11c5_init_db.py
app/: main.py
app/core/: settings.py
app/models/: engine.py  users.py
app/routes/v1/: users.py
app/schema/: user.py
app/services/: user_service.py
app/utils/: generate_id.py
